# vitapresence-tauri

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
scripts/: tauri-build.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  covers.rs  discord.rs  lib.rs  main.rs  vita.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  types.ts
ui/src/hooks/: useTauri.ts
