[package]
name    = "vitapresence"
version = "1.0.0"
edition = "2021"

[lib]
name       = "vitapresence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vitapresence"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dirs               = "5"
once_cell          = "1"
libc               = "0.2"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
